Fixed dancing hamster home link overlap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -699,8 +699,9 @@ header blockquote {
 .post-navigation .home-link {
     text-align: center;
     flex: 1;
-    margin: 0vw 0.5vw;
     white-space: nowrap;
+    margin-bottom: 7vh;
+    margin-top: 0vh;
 }
 
 .post-navigation a {
